fix(ai-help): align avatar with text

--- a/client/src/plus/ai-help/index.scss
+++ b/client/src/plus/ai-help/index.scss
@@ -72,6 +72,7 @@
         height: 1.5rem;
         margin-left: unset;
         margin-right: unset;
+        margin-top: 0.1rem; /* Align with text. */
         position: unset;
         width: 1.5rem;
       }
